Fix: added overflow scroll to accordion checked items to make more user friendly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,12 +211,20 @@ i:hover {
     height: 400px;
 }
 
-.about-me-cont h1 {
+.about-me-cont h2 {
     text-align: center;
     font-size: 40px;
     margin-top: 30px;
     margin-bottom: 30px;
     margin-right: 316px;
+}
+
+/* About me container*/
+
+.a-box {
+    height: auto;
+    width: 100%;
+
 }
 
 /* About me circle */
@@ -526,5 +534,47 @@ i:hover {
         height: 75px;
     }
 
+    /* minimal fitness page */
+
+    .a-box{
+        height: 800px;
+        display: block;
+        white-space: normal;
+    }
+
+    .about-circ-cont{
+        clear: both;
+        margin: 0 auto;
+        margin-left: 16px;
+        shape-outside: none;
+    }
+
+    .about-me-cont .about-head{
+        text-align: center;
+        height: 2em;
+        width: auto;
+    }
+
+    .about-me-cont p{
+        padding: 0;
+        margin-top: 0px;
+        margin-left: 0;
+        line-height: 20px;
+        text-align: center;
+    }
+
+    .pillars {
+        margin-top: 0;
+        margin-right: 0;
+    }
+
+    .dtr-cont{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #dropdown-menu label + input[type="radio"]:checked + .content{
+        overflow: scroll;
+    }
 
 }
